tests/paczka2/big_fuzzy/85534583.err
Error in line 2: S514 A438 40,2
Error in line 8: 0umQdMKN S514 13,1
Error in line 6: S514 S514 83,1
Error in line 11: IUQugX6fjE A530 7,7
Error in line 30: GF621ZN A438 13,0
Error in line 32: 0umQdMKN A530 52,0
Error in line 31: GF621ZN A530 67,5
Error in line 44: oOm S337 39,1
Error in line 49: oOm S514 66,3
Error in line 52: oOm A530 5,2
Error in line 46: r86 A438 79,2
Error in line 54: oOm S337 0,7
Error in line 50: 0umQdMKN A530 82,9
Error in line 62: 0umQdMKN A438 11,9
Error in line 68: oOm S514 71,2
Error in line 95: IUQugX6fjE A530 71,6
Error in line 101: IUQugX6fjE A438 57,7
Error in line 97: 0umQdMKN A530 346,9
Error in line 106: r86 A438 68,7
Error in line 111: r86 S337 84,4
Error in line 103: IUQugX6fjE S337 69,6
Error in line 130: oOm A530 3,0
Error in line 145: r86 S337 28,7
Error in line 155: r86 S514 -2,1
Error in line 153: vmu S514 50,7
Error in line 154: r86 S514 95,3
Error in line 180: IUQugX6fjE A438 7,3
Error in line 165: r86 A530 36,6
Error in line 183: oOm S514 50,7
Error in line 181: IUQugX6fjE S514 12,5
Error in line 185: S514 A438 99,3
Error in line 182: r86 S514 4,6
Error in line 202: GF621ZN A530 83,7
Error in line 216: GF621ZN S514 58,4
Error in line 196: oOm S337 52,7
Error in line 226: oOm A530 82,9
Error in line 232: r86 S337 198,1
Error in line 242: GF621ZN A438 12,9
Error in line 247: vmu A530 48,9
Error in line 246: S514 S337 45,0
